<resources>
    <string name="app_name">LoChat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="new_user">New User</string>
    <string name="radius">Radius</string>
    <string name="create_room">Create Room</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Chat Room Name</string>
    <string name="send">Send</string>
    <string name="message">Message ...</string>
</resources>
