<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ucla.canu.lochat.ListRoomsScreen">

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="85dp">
    <ListView
        android:id="@+id/listview"
        android:layout_width="350dp"
        android:layout_height="343dp"/>
    </android.support.v4.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/sign_out"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:onClick="signOut"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/create_room"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/create_room"
        android:onClick="createNewRoom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chatName"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign_out" />

    <EditText
        android:id="@+id/radius"
        android:layout_width="76dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:hint="@string/radius"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/chatName"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="1dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="@+id/create_room"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/radius" />
</android.support.constraint.ConstraintLayout>
